<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/placeholderFragment">

    <fragment
        android:id="@+id/placeholderFragment"
        android:name="com.example.lights.PlaceholderFragment"
        android:label="@string/menu_lights"
        tools:layout="@layout/fragment_placeholder" >
        <action
            android:id="@+id/action_placeholderFragment_to_nav_light"
            app:destination="@id/nav_light" />
    </fragment>

    <fragment
        android:id="@+id/nav_light"
        android:name="com.example.lights.Devices"
        android:label="@string/menu_lights"
        tools:layout="@layout/fragment_devices" />

    <fragment
        android:id="@+id/nav_groups"
        android:name="com.example.lights.ItemFragment"
        android:label="@string/menu_groups"
        tools:layout="@layout/fragment_item_list" />

    <fragment
        android:id="@+id/addLight"
        android:name="com.example.lights.AddLight"
        android:label="@string/add_light"
        tools:layout="@layout/fragment_add_light"/>

    <fragment
        android:id="@+id/addNewGroup"
        android:name="com.example.lights.AddGroup"
        android:label="@string/add_group"
        tools:layout="@layout/fragment_add_group"/>
    <fragment
        android:id="@+id/add_light_to_group"
        android:name="com.example.lights.AddLightToGroup"
        android:label="@string/manageGroups"
        tools:layout="@layout/fragment_add_light_to_group">
        <fragment
            android:id="@+id/removeLightFromGroup"
            android:name="com.example.lights.RemoveLightFromGroup"
            android:label="usuwanie"
            tools:layout="@layout/fragment_remove_light_from_group"/>
    </fragment>



    <action
        android:id="@+id/ac_g_addLight"
        app:destination="@id/addLight"/>
    <action
        android:id="@+id/ac_g_addNewGroup"
        app:destination="@id/addNewGroup"/>
    <action
        android:id="@+id/action_global_nav_light"
        app:destination="@id/nav_light"/>
    <action
        android:id="@+id/action_global_nav_groups"
        app:destination="@id/nav_groups"/>
    <action
        android:id="@+id/ac_g_light_to_group"
        app:destination="@id/add_light_to_group"/>



</navigation>